build/log/idf_py_stdout_output_78064
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\Omer\Dropbox\ESP\ESP32-C3-TFT\KeyChain\build\bootloader\esp-idf\esptool_py && C:\Espressif\frameworks\esp-idf-v5.5\tools\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.5/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/build/bootloader/bootloader.bin"
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj 
ccache C:\Espressif\frameworks\esp-idf-v5.5\tools\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/build/config -IC:/Espressif/frameworks/esp-idf-v5.5/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/port/esp32c3/. -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/port/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32c3/register -IC:/Espressif/frameworks/esp-idf-v5.5/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/hal/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32c3/include/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_system/port/include/riscv -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5/components/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/spi_flash/include -IC:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/components/lvgl -IC:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/components/lvgl/src -IC:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/components -IC:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/components/lvgl/examples -IC:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/components/lvgl/demos -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_lcd/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_lcd/interface -IC:/Espressif/frameworks/esp-idf-v5.5/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.5/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_gpio/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_spi/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_ana_cmpr/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_i2s/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdspi/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdio/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_dac/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_rmt/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_tsens/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdm/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_i2c/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_ledc/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_parlio/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_twai/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_timer/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5=/IDF -fstrict-volatile-bitfields -fasynchronous-unwind-tables -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj -c C:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/main/main.cc
C:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/main/main.cc: In function 'void app_main()':
C:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/main/main.cc:165:5: warning: missing initializer for member 'esp_timer_create_args_t::skip_unhandled_events' [-Wmissing-field-initializers]
  165 |     };
      |     ^
C:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/main/main.cc: In function 'void slider_event_handler(lv_event_t*)':
C:/Users/Omer/Dropbox/ESP/ESP32-C3-TFT/KeyChain/main/main.cc:287:20: error: format '%d' expects argument of type 'int', but argument 3 has type 'int32_t' {aka 'long int'} [-Werror=format=]
  287 |     sprintf(buf, "%d", value);
      |                   ~^   ~~~~~
      |                    |   |
      |                    int int32_t {aka long int}
      |                   %ld
cc1plus.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
